Add Prometheus and Grafana observability stack
Add Prometheus time-series scraping for Actuator metrics and pre-provisioned Grafana dashboards tracking rate-limit drops, latency percentiles (p50/p95/p99), and Resilience4j circuit breaker state.